--- a/WaterCraft/assets/watercraft/lang/en_US.lang
+++ b/WaterCraft/assets/watercraft/lang/en_US.lang
@@ -53,4 +53,7 @@ strings.watercraft:toolbox_empty=An empty Toolbox
 strings.watercraft:toolbox_owner=This Toolbox belongs to: %s
 strings.watercraft:toolbox_no_owner=An unowned Toolbox
 
+strings.watercraft:module_exception=The mod %s is attempting to register a module to the item name %s, however, this item is already registered by %s and cannot be overwritten.
+strings.watercraft:module_invalid_mod_exception=The class %s is not a registered Forge Modloader mod container, the module with the item %s will not be registered.
+
 death.attack.inception=%s got stuck in Limbo while trying to put a Toolbox in a Toolbox.
