--- a/WaterCraft/assets/watercraft/lang/it_IT.lang
+++ b/WaterCraft/assets/watercraft/lang/it_IT.lang
@@ -22,4 +22,7 @@ strings.watercraft:toolbox_empty=Cassetta degli Attrezzi vuota
 strings.watercraft:toolbox_owner=Questa Cassetta degli Attrezzi appartiene a: %s
 strings.watercraft:toolbox_no_owner=Cassetta degli Attrezzi senza proprietario
 
+strings.watercraft:module_exception=The mod %s is attempting to register a module to the item name %s, however, this item is already registered by %s and cannot be overwritten. (NEEDS TRANSLATION)
+strings.watercraft:module_invalid_mod_exception=The class %s is not a registered Forge Modloader mod container, the module with the item %s will not be registered. (NEEDS TRANSLATION)
+
 death.attack.inception=%s intrappolato nel Limbo mentre cercava di mettere una Cassetta degli Attrezzi in una Cassetta degli Attrezzi
