Fixed #18 also fixed the black flag not appearing in the creative menu

--- a/WaterCraft/assets/watercraft/lang/en_US.lang
+++ b/WaterCraft/assets/watercraft/lang/en_US.lang
@@ -31,6 +31,7 @@ item.watercraft:flag.orange=Orange Flag
 item.watercraft:flag.magenta=Magenta Flag
 item.watercraft:flag.light_blue=Light Blue Flag
 item.watercraft:flag.yellow=Yellow Flag
+item.watercraft:flag.lime_green=Lime Green Flag
 item.watercraft:flag.pink=Pink Flag
 item.watercraft:flag.grey=Grey Flag
 item.watercraft:flag.light_grey=Light Grey Flag
