Started work on the engines

--- a/WaterCraft/resources/assets/watercraft/lang/en_US.lang
+++ b/WaterCraft/resources/assets/watercraft/lang/en_US.lang
@@ -25,6 +25,7 @@ item.watercraft:padlock.name=Padlock
 item.watercraft:key.name=Padlock Key
 item.watercraft:calculator.name=Calculator
 item.watercraft:wcboatmodular.name=Modular Boat
+item.watercraft:boatEngine.name=Boat Engine
 
 item.watercraft:flag.white=White Flag
 item.watercraft:flag.orange=Orange Flag
